Name:                ght
Version:             0.1.0
License:             GPL
Author:              Conrad Parker <conrad@metadecks.org>
Category:            Development
Synopsis:            Trivial routines for inspecting git repositories
Description:         This is a bunch of trivial routines for inspecting git
                     repositories. It is in no way useful beyond that.
Stability:           experimental
Build-Type:          Simple
Cabal-Version:       >= 1.2

------------------------------------------------------------
-- ght tool
--

Executable ght
    Main-Is:         ght.hs
    Hs-Source-Dirs:  ., tools
    Build-Depends:   base, data-default, transformers, ui-command, unix, directory, filepath
